# hello

./: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.ac
autom4te.cache/: output.1  traces.0  traces.1
src/: Makefile.am  Makefile.in  hello.c
